# webapp

./: .editorconfig  .gitignore  404.ecpp  500.ecpp  Makefile.am  README.md  config.yml.in  configure.ac  game.ecpp  index.ecpp  log.xml.in  page.ecpp
cpp_src/: main.cpp
game/: .editorconfig  .gitignore  Makefile.in  README.md  bower.json
game/src/: Main.purs
game/src/Cyvasse/: Board.purs  Color.purs  Moves.purs  Piece.purs  Square.purs  Terrain.purs  Utils.purs
game/src/Cyvasse/Svg/: Board.purs
game/test/: Main.purs
include/: head.ecpp  page_footer.ecpp  page_header.ecpp
news/: Makefile.am  cyvasse-online-beta.md  forum-up-and-running.md  news.yml  we-re-on-facebook-now.md
page-content/: Makefile.am
page-content/static-text/: welcome.md  what-is-cyvasse.md
resources/: Makefile.am
resources/css/: _animation.scss  _flexbox.scss  _font-face.scss  _frontpage.scss  _game.scss  _header.scss  _input.scss  _layout.scss  _misc.scss  _respond-to.scss  _variables.scss  rule-set.scss  style.scss
resources/rule-sets/: mikelepage.md
resources/static-text/: legal-information.md  legal-notice-de.md  legal-notice-en.md  what-is-cyvasse.md  wip.md
rule_sets/: Makefile.am  mikelepage.md
src/: Makefile.am  main.cpp  page-json.cpp  page-title.cpp  page-title.hpp  pagemeta.yml  pagemeta_reader.cpp  pagemeta_reader.hpp
src/ecpp/: 404.ecpp  500.ecpp  create-game.ecpp  create.ecpp  disclaimer.ecpp  game.ecpp  index.ecpp  join-game.ecpp  legal.ecpp  page.ecpp  page.json.ecpp  random-game-view.ecpp  rule-set.ecpp  rule_set.ecpp
src/ecpp/include/: favicon.html  head.ecpp  page_footer.ecpp  page_header.ecpp  side_pane.ecpp
src/news/: Makefile.am  news.yml
src/static/: load-game.js
src/static/css/: cyvasse-online.css  noscript.css
src/static/js/: cyvasse-game-client.js  cyvasse-webapp.js  cyvasse-ws-client.js  logbox.js  random-game-view.js
static/: load-game.js  robots.txt
static/css/: cyvasse-online.css
static/icons/: browserconfig.xml  manifest.json
static/js/: cyvasse-ws-client.js  logbox.js
